--- a/form.css
+++ b/form.css
@@ -1,6 +1,6 @@
 body{
     position: absolute;
-    background-image: url(prism.png);
+    background-image: url(/Images/prism.png);
     left: 30%;
     top: 5%;
 }
