--- a/css/Show.css
+++ b/css/Show.css
@@ -9,11 +9,11 @@ body{
     color: black;
     line-height: 1.6;
     height: 100vh;
-    -webkit-animation-delay: 0.1s;
+    /*-webkit-animation-delay: 0.1s;
     -webkit-animation-name: fontfix;
     -webkit-animation-duration: 0.1s;
     -webkit-animation-iteration-count: 1;
-    -webkit-animation-timing-function: linear;
+    -webkit-animation-timing-function: linear;*/
 }
 
 @font-face{
@@ -45,13 +45,13 @@ body{
 }
 
 .navbar{
-    position: fixed;
     top: 0;
     z-index: 1;
     display: flex;
     width: 100%;
     height: 60px;
-    background: rgba(0,0,0,7)
+    background: rgba(0,0,0,7);
+    text-align: center;
 }
 
 nav ul{
@@ -59,6 +59,8 @@ nav ul{
     list-style:none;
     width: 100%;
     justify-content: center;
+    z-index: 2;
+
 }
 
 .navbar ul li{
@@ -75,6 +77,16 @@ nav ul{
 .navbar ul li a:hover{
     color: skyblue;
 }
+
+/*.nav-right{
+    float: right;
+    margin-left:200px;
+    color:whitesmoke;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #ffffff;
+    list-style: none;
+}*/
 
 section{
     display: flex;
@@ -114,6 +126,8 @@ section .button{
     color: black;
     border: black 1px solid;
     padding: 10px 20px;
-
+    border-radius: 10px;
+    position: relative;
+    top: 8%;
 }
 
