--- a/form.css
+++ b/form.css
@@ -10,7 +10,7 @@ body{
         height: 720px;
         border: 2px solid #009698;
         border-radius: 10%;
-        color: black;
+        color: #ffffff;
         top: 10%;
         left: 25%;
         font-size: 20px;
@@ -26,7 +26,8 @@ input[type=text], input[type=password] {
     margin: 5px 0 5px 0;
     display: inline-block;
     border: none;
-    background: black;
+    background: #ffffff;
+    color: #ffffff;
   }
 
 .validebtn{
