Réparation inscription , ajout de condition

--- a/form.css
+++ b/form.css
@@ -16,7 +16,7 @@ body{
         font-size: 20px;
 }
 .content{
-    position: relative; 
+    position: relative;
     left: 3% ;
 }
 input[type=text], input[type=password] {
@@ -26,8 +26,8 @@ input[type=text], input[type=password] {
     margin: 5px 0 5px 0;
     display: inline-block;
     border: none;
-    background: #ffffff;
-    color: #ffffff;
+    background: white;
+    color: white;
   }
 
 .validebtn{
@@ -42,3 +42,28 @@ input[type=text], input[type=password] {
     position: relative;
     left: 20%;
 }
+
+.alert {
+    padding: 20px;
+    background-color: #f44336; /* Red */
+    color: white;
+    margin-bottom: 15px;
+    text-align: center;
+  }
+  
+  /* The close button */
+  .closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  /* When moving the mouse over the close button */
+  .closebtn:hover {
+    color: black;
+  }
