--- a/css/Show.css
+++ b/css/Show.css
@@ -34,7 +34,7 @@ body{
     font-style: normal;
 }
 
-@-webkit-keyframes fontfix {
+@keyframes fontfix {
     from { opacity: 1; }
     to   { opacity: 1; }
    }
@@ -80,7 +80,8 @@ nav ul{
 }
 
 .login_form>form{
-    background: #ffffff;
+    background: black;
+    color: #ffffff;
 }
 
 /*.nav-right{
