--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,41 @@
+body{
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333333;
+    background: #f0f0f0;
+    overflow-x: hidden;
+}
 
+/* Top Menu Style */
+#top{
+    background: #555555;
+    padding: 10px 0;
+}
+
+#top .offer{
+    color: #ffffff
+}
+
+#top .offer .btn{
+    text-transform: uppercase;
+}
+
+@media(max-width: 991px){
+    #top .offer {
+        margin-bottom: 10px;
+    }
+}
+@media(max-width: 991px){
+    #top{
+        font-size: 12px;
+        text-align: center;
+    }
+}
+#top a{
+    color: #ffffff;
+}
+top ul.menu{
+    padding-top: 5px;
+    margin: 0px;
+    text-align: right;
+}
