--- a/css/Show.css
+++ b/css/Show.css
@@ -26,7 +26,7 @@ body{
 }
 
 @font-face{
-    font-family: ParagFont;
+    font-family: 'ParagFont';
     src: url("/Font/Roboto/Roboto-Regular.eot");
     src: url("/Font/Roboto/Roboto-Regular.woff2") format('woff2'),
          url("/Font/Roboto/Roboto-Regular.woff") format('woff'),
@@ -126,7 +126,7 @@ section#Info {
 }
 
 section#Contact {
-    background: url('Images/Portablesetfilles.png') no-repeat center center/cover;
+    background: url('/Images/Portablesetfilles.png') no-repeat center center/cover;
 }
 
 section .button{
