--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,24 @@ body{
     font-size: 12px;
     list-style: none;
 }
+@media(max-width: 1951px){
+    #top ul.menu{
+        text-align: center;
+    }
+    #top ul.menu> li{
+        display: inline-block;
+    }
+    
+    #top ul.menu> li a{
+        color: #eeeeee;
+    }
+    
+    #top ul.menu>li + li:before{
+        content: "|\00a0";
+        color: #f7f7f7;
+        padding: 0px 5px;    
+    }
+}
 
 @media(max-width: 1551px){
     #top ul.menu{
