Fixed css on Index.php and added breadcrumb on shopping.php

--- a/css/style.css
+++ b/css/style.css
@@ -79,21 +79,7 @@ body{
     }
 }
 
-/* Fil d'ariane Style 
 
-.FilA{
-    padding: 8px 15px;
-    margin-bottom: 26px;
-    background: #ffffff;
-    border-radius: 5px;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, .5)
-}
-
-.FilA> li + li:before{
-    color: #cccccc;
-    content: "|\00a0"
-}
-*/
 /*Header style */
 
 .navbar{
@@ -127,12 +113,13 @@ body{
 
 #search{
     clear: both; /*?*/
-    border-top: solid 1px #9adacd
+    border-top: solid 1px #9adacd;
+    text-align: right;
 }
 
 #search .navbar-form .input-group{
     display: table;
-}
+}  
 
 #search .navbar-form .input-group .form-control{
     width: 100%;
