--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,27 @@ body{
 #search .navbar-form .input-group .form-control{
     width: 100%;
 }
+
+/*Breadcrumb Style*/
+.breadcrumb{
+    padding: 8px 15px;
+    margin-top: 20px;
+    background: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, .5)
+}
+
+.breadcrumb>li + li:before{
+    content: ">\00a0";
+    color: #cccccc
+}
+
+@media(max-width: 991px){
+    .breadcrumb{
+        padding: 8px 0px;
+        text-align: center;
+    }
+}
 /* Showroom index style */
 .shw-container{
     margin: 0;
